Stop showing decorationsOverviewRuler in notebook code cells by setting hidden visibility in css

--- a/src/sql/parts/notebook/cellViews/code.css
+++ b/src/sql/parts/notebook/cellViews/code.css
@@ -25,6 +25,12 @@ code-component .toolbarIconRun {
 	background-image: url('../media/dark/execute_cell_inverse.svg');
 }
 
+/* overview ruler */
+code-component .monaco-editor.vs .decorationsOverviewRuler,
+code-component .monaco-editor.vs-dark .decorationsOverviewRuler {
+	visibility: hidden;
+}
+
 code-component .carbon-taskbar .icon {
 	background-size: 20px;
 	width: 40px;
